# cmdlib

./: CMakeLists.txt  README.md  cmdlibConfig.cmake.in
cmake/: cmdlibConfig.cmake.in
doc/: UserGuide.md
include/: CommandFacility.hpp  CommandedObject.hpp
include/cmdlib/: CommandFacility.hpp  CommandResult.hpp  CommandResult.hpp.BUP  CommandedObject.hpp  Issues.hpp
include/cmdlib/cmd/: Nljs.hpp  Structs.hpp
plugins/: stdinCommandFacility.cpp
schema/: generate.sh
schema/cmdlib/: cmd.jsonnet
src/: CommandFacility.cpp  FileCommandFacility.cpp  StdinCommandFacility.cpp  stdinCommandFacility.cpp
test/: dummy_command_facility.cpp  dummy_commanded_object.hpp  test_dummy_app.cxx  test_stdin_app.cxx
test/apps/: DummyCommandedObject.hpp  test_dummy_app.cxx  test_stdin_app.cxx
test/plugins/: dummyCommandFacility.cpp  dummy_command_facility.cpp
